# custom_deep_research

./: .env.example  .gitignore  README.md  forvard_vard.md  main.py  pyproject.toml
agents/: analysis_systhesis_agent.py  content_extraction.py  generate_queries_agent.py  report_generation_agent.py  search_agent.py  validate_sources_agent.py
graph/: state.py  workflow.py
tools/: analysis_synthesis_tool.py  content_extraction_bs4_tool.py  report_generation_tool.py  source_validation_tool.py  websearch_serper_tool.py
